--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,16 +2,15 @@
     <string name="app_name">Something</string>
     <string name="title_activity_splash_screen">SplashScreenActivity</string>
     <string name="app_logo">App Logo</string>
-    <string name="title_activity_home">HomeActivity</string>
-    <!-- Strings used for fragments for navigation -->
-    <string name="first_fragment_label">First Fragment</string>
-    <string name="second_fragment_label">Second Fragment</string>
-    <string name="next">Next</string>
-    <string name="previous">Previous</string>
 
-    <string name="hello_first_fragment">Hello first fragment</string>
-    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
+    <string name="title_activity_home">HomeActivity</string>
+    <string name="list_fragment_label">Employee List Fragment</string>
+    <string name="employee_detail_fragment_label">Employee Detail Fragment</string>
     <string name="profile_image">Profile Image</string>
     <string name="detail">Detail</string>
     <string name="back_button">Back Button</string>
+    <string name="employee_list">Employee List</string>
+    <string name="my_employee_list">My Employee List</string>
+    <string name="company_details">Company Details</string>
+    <string name="address">Address</string>
 </resources>
